// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_EuiPageEmptyPrompt EuiEmptyPromptProps is rendered 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-l-center"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-horizontal"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-horizontal-l-l"
      >
        <div
          class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-horizontal"
        >
          <span
            color="subdued"
            data-euiicon-type="warning"
          />
        </div>
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-horizontal"
        />
      </div>
      <div
        class="euiEmptyPrompt__footer emotion-euiEmptyPrompt__footer-l-plain"
      >
        Footer
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt EuiPageSectionProps is rendered 1`] = `
<section
  class="emotion-euiPageSection-l-horizontalCenter-transparent"
>
  <div
    class="emotion-euiPageSection__content-l-center"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt is rendered 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-l-center"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--plain euiEmptyPrompt testClass1 testClass2 emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical-euiTestCss"
      data-test-subj="test subject string"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt paddingSize l is rendered 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-l-center"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt paddingSize m is rendered 1`] = `
<section
  class="emotion-euiPageSection-grow-m-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-m-center"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-m"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt paddingSize none is rendered 1`] = `
<section
  class="emotion-euiPageSection-grow-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-center"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt paddingSize s is rendered 1`] = `
<section
  class="emotion-euiPageSection-grow-s-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-s-center"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-s"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt paddingSize xl is rendered 1`] = `
<section
  class="emotion-euiPageSection-grow-xl-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-xl-center"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt paddingSize xs is rendered 1`] = `
<section
  class="emotion-euiPageSection-grow-xs-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-xs-center"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt panelled is false and color is defined, then the prompt inherits the color 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-l-center"
  >
    <div
      class="euiPanel euiPanel--warning euiEmptyPrompt emotion-euiPanel-m-warning-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt panelled is false and color is not defined, then the prompt is plain 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-l-center"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt panelled is true and color is defined, then the prompt inherits the color 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-plain"
>
  <div
    class="emotion-euiPageSection__content-l-center"
  >
    <div
      class="euiPanel euiPanel--accent euiEmptyPrompt emotion-euiPanel-m-accent-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt panelled is true and color is not defined, then the prompt is subdued 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-plain"
>
  <div
    class="emotion-euiPageSection__content-l-center"
  >
    <div
      class="euiPanel euiPanel--subdued euiEmptyPrompt emotion-euiPanel-m-subdued-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt restrict width can be set to a custom number 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-l-center-restrictWidth"
    style="max-width: 1024px;"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt restrict width can be set to a custom value and measurement 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-l-center-restrictWidth"
    style="max-width: 24rem;"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`_EuiPageEmptyPrompt restrict width can be set to a default 1`] = `
<section
  class="emotion-euiPageSection-grow-l-center-transparent"
>
  <div
    class="emotion-euiPageSection__content-l-center-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
    >
      <div
        class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
      >
        <div
          class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
        />
      </div>
    </div>
  </div>
</section>
`;
